--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Activity 1: Basic HTML Bio</title>
+</head>
 
-<h1> Hello </h1>
+<body>
+  <h1> Philip Hayes -- Instant Ticket Manager, IGT </h1>
+  <br>
+  <h2>5301 Riata Park Ct. <br> Austin, TX. 78758</h2>
+  <br>
+  <img width="200" src="https://media.gettyimages.com/photos/texas-skyline-during-golden-hour-picture-id147331308?s=2048x2048" alt="Austin!" />
+  <br>
+  
+  My name is Philip Hayes and I'm a Product Manager for IGT based out of Austin, Tx. <br> I've worked for IGT for the past 11 years in different capacities including Sales, <br> Call Center Management and Business Operations Management.
+  
+  <br>
+  <br>
+  In my current role, I am responsible for the growth of revenue delivered to the Texas <br> School Education Fund by the Texas Lottery Commission through the sale of <br> Scratch-Off Tickets.
+
+  <ul>
+    <li><a href="https://www.linkedin.com"> LinkedIn</a> </li>
+    <li><a href="https://www.IGT.com"> IGT.com </a></li>
+  </ul>
+</body>
 
 </html>
