--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-  <h1> Philip Hayes -- Instant Ticket Manager, IGT </h1>
-  <br>
-  <h2>5301 Riata Park Ct. <br> Austin, TX. 78758</h2>
+  <h1>Philip HayesInstant Ticket Manager, IGT </h1>
+  <h2>Instant Ticket Manager, IGT</h2>
+  <h3>5301 Riata Park Ct. <br> Austin, TX. 78758</h3>
   <br>
   <img width="200" src="https://media.gettyimages.com/photos/texas-skyline-during-golden-hour-picture-id147331308?s=2048x2048" alt="Austin!" />
   <br>
