--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1>Philip HayesInstant Ticket Manager, IGT </h1>
+  <h1>Philip Hayes</h1>
   <h2>Instant Ticket Manager, IGT</h2>
   <h3>5301 Riata Park Ct. <br> Austin, TX. 78758</h3>
   <br>
